Include Home Assistant Version - Manifest.json

--- a/custom_components/hive/manifest.json
+++ b/custom_components/hive/manifest.json
@@ -6,6 +6,7 @@
     "pyhiveapi==0.2.18.1"
   ],
   "dependencies": [],
+  "homeassistant": "0.96.0",
   "codeowners": [
     "@Rendili",
     "@KJonline"
