--- a/custom_components/hive/services.yaml
+++ b/custom_components/hive/services.yaml
@@ -20,7 +20,7 @@ boost_hot_water:
   fields:
     entity_id:
       {
-        description: Enter the entity_id for the device reuired to set the boost mode.,
+        description: Enter the entity_id for the device required to set the boost mode.,
         example: "water_heater.hot_water",
       }
     time_period: { description: Set the time period for the boost., example: "01:30:00" }
